HTML5 writer: docinfo styling tweaks
"minimal.css":
  make docinfo list compact (no top/bottom margin around fields).

"responsive.css":
  Use standard "wide" indentation (left margin) in "docinfo" fields
  to get better alignment, especially of multiple authors in "authors" field.
  Use a smaller indentation for narrow screens.

  Remove spurious selector: option-lists don't use the "--field-indent" variable.

git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@10018 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/docutils/writers/html5_polyglot/minimal.css
+++ b/docutils/docutils/writers/html5_polyglot/minimal.css
@@ -69,10 +69,9 @@ span.problematic {
 /* Lists */
 
 /* compact and simple lists: no margin between items */
-.simple  li, .simple  ul, .simple  ol,
-.compact li, .compact ul, .compact ol,
-.simple  > li p, dl.simple  > dd,
-.compact > li p, dl.compact > dd {
+.simple  li, .simple  ul, .simple  ol, .simple  > li p,
+.compact li, .compact ul, .compact ol, .compact > li p,
+dl.simple  > dd, dl.compact > dd, dl.docinfo > dd {
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -141,7 +140,7 @@ dl.option-list > dd > *:first-child
 /* Bibliographic Fields (docinfo) */
 dl.docinfo pre.address {
   font: inherit;
-  margin: 0.5em 0;
+  margin: 0;
 }
 dl.docinfo > dd.authors > p { margin: 0; }
 
