Remove spurious selector in HTML5 CSS styles.
While a topic is described as "like a block quote with a title",
the document model does not support attributions nested in topics,
so the selector ".topic p.attribution" does never match.

git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@10079 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/docutils/writers/html5_polyglot/plain.css
+++ b/docutils/docutils/writers/html5_polyglot/plain.css
@@ -157,8 +157,7 @@ pre.math, pre.code {
 
 /* Block Quotes and Topics */
 bockquote { margin: 1em 2em; }
-blockquote p.attribution,
-.topic p.attribution {
+blockquote p.attribution {
   text-align: right;
   margin-left: 20%;
 }
