--- a/docutils/docutils/writers/html5_polyglot/responsive.css
+++ b/docutils/docutils/writers/html5_polyglot/responsive.css
@@ -91,8 +91,7 @@ div.dedication {
   display: none;
 }
 
-blockquote p.attribution,
-.topic p.attribution {
+blockquote p.attribution {
   text-align: right;
 }
 
