Update/fix handling of duplicate identifiers.
Update the code in `nodes.document.set_duplicate_name_id()` to
* simplify the logic,
* don't insert INFO level `<system_message> at places where it is invalid,
* don't insert backlinks from a system message to an invisible target element
  (an external `<target>` is not visible in HMTL and LaTeX output).

Highlight targeted system-message in "responsive.css" style sheet.

git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@10170 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/docutils/writers/html5_polyglot/responsive.css
+++ b/docutils/docutils/writers/html5_polyglot/responsive.css
@@ -293,6 +293,7 @@ span:target + h5, span:target + h6,
 dt:target, span:target, p:target,
 .contents :target,
 .contents:target > .topic-title,
+aside.system-message:target,
 [role="doc-biblioentry"]:target,
 [role="doc-biblioref"]:target,
 [role="note"]:target, /* Docutils 0.18 and 0.19 */
