Relax test for valid parents of topics or sidebars.
Raise error if the parent element belongs to a not-allowed parent class
instead of when the parent element is not in a supported parent class.
The difference is with uncategorized parent classes (like `node.Element`
or `sphinx.addnodes.only`). This allows for auxiliary wrappers during
the parsing step and fixes issues with the Sphinx "only" directive.

cf. https://github.com/sphinx-doc/sphinx/issues/14002

git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@10256 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/docutils/writers/html5_polyglot/responsive.css
+++ b/docutils/docutils/writers/html5_polyglot/responsive.css
@@ -72,6 +72,11 @@ div.line-block div.line-block,
 pre, dd, dl.option-list {
   margin-left: calc(2% + 1em);
 }
+/* but not in a table cell */
+td pre, td dl.option-list {
+  margin-left: 0;
+}
+
 
 /* Object styling */
 /* ============== */
@@ -201,6 +206,8 @@ table tr {
   text-align: left;
   vertical-align: baseline;
 }
+td *:first-child { margin-top: 0; }
+td *:last-child { margin-bottom: 0; }
 table.booktabs { /* "booktabs" style (no vertical lines) */
   border-top: 2px solid;
   border-bottom: 2px solid;
